<resources>
    <string name="app_name">JobSearchAssistant</string>
    <string name="form_recruiter">Recruiter Name</string>
    <string name="form_email">E-mail</string>
    <string name="form_company">Company</string>
    <string name="form_position">Job Position</string>
    <string name="form_job_position_type_prompt">Employment Type</string>
    <string-array name="form_job_position_type_array">
        <item>Full-Time</item>
        <item>Part-Time</item>
        <item>Unknown</item>
    </string-array>
    <string name="form_phone">Phone Number</string>
    <string name="form_compensation">Compensation</string>
    <string-array name="form_status_array">
        <item>E-mail Received</item>
        <item>E-mail Ansewered</item>
        <item>On Hold</item>
        <item>Voice Mail</item>
        <item>On Site Interview</item>
        <item>Phone Interview</item>
        <item>Offered Made</item>
        <item>Declined</item>
    </string-array>
    <string name="form_status_prompt">Job Offer Status</string>
    <string-array name="form_pending_action_array">
        <item>None</item>
        <item>Send E-Mail</item>
    </string-array>
    <string name="form_pending_action_prompt">Pending Action</string>
    <string name="form_notes">Additional Notes</string>
    <string name="title_activity_job_list">JobListActivity</string>
    <string-array name="form_compensation_type_array">
        <item>/year</item>
        <item>/month</item>
        <item>/hour</item>
    </string-array>
    <string name="form_meeting_date">Meeting Date</string>
    <string name="form_meeting_time">Time</string>
    <string name="form_error_company">Must add a company name to add a Job Application</string>
    <string name="form_reminders">Reminder:</string>
    <string name="form_reminder_prompt">Select a reminder time</string>
    <string-array name="form_reminder_array">
        <item>None</item>
        <item>10 minutes before</item>
        <item>15 minutes before</item>
        <item>20 minutes before</item>
        <item>25 minutes before</item>
        <item>30 minutes before</item>
        <item>45 minutes before</item>
        <item>1 hour before</item>
        <item>2 hours before</item>
        <item>3 hours before</item>
        <item>12 hours before</item>
        <item>24 hours before</item>
        <item>2 days before</item>
        <item>1 week before</item>
    </string-array>
</resources>